--- a/index.html
+++ b/index.html
@@ -60,14 +60,48 @@
         </a>
     </div>
 
-
     <div>
         <a href="#" class="main-right-img">
             <img src="./assets/asset 9.gif" alt="">
         </a>
     </div>
    </div>
+
+   <div class=" promise">
+    <h1 class="gradient-text">No Hidden Fees Ever.</h1>
+    <p>No Joining Fees. <br>
+        No Annual Fees. <br>
+        No Rewards Redemption Fees.</p>
+   </div>
+
+   <footer class=" footer-sec ">
+    <div class="link-column flex">
+        <h4>OneCard</h4>
+        <p>India's best metal credit card. Built with full-stack tech. Backed by the principles of simplicity, transparency, and giving back control to the user.</p>
+    </div>
+    <div class="link-column flex">
+        <h4>Navigation</h4>
+        <a href="#" class="hover-link">Home</a>
+        <a href="#" class="hover-link">About us</a>
+        <a href="#" class="hover-link">Careers</a>
+        <a href="#" class="hover-link">Others</a>
+    </div>
+    <div class="link-column flex">
+        <h4>Support</h4>
+        <a href="#" class="hover-link">F.A.Q</a>
+        <a href="#" class="hover-link">Cookies policy</a>
+        <a href="#" class="hover-link">Term of service</a>
+        <a href="#" class="hover-link">Support</a>
+    </div>
+    <div class="link-column flex">
+        <h4>Newsletter</h4>
+        <input type="text" placeholder="your email is here">
+        <a href="#"class="subscribe-btn">subscribe</a>
+    </div>
+
+   </footer>
+
 </main>
-    </body>
-    <script src="script.js"></script>
+</body>
+    <script src="script.js"></script> 
 </html>
